scalafmt: avoid simple overflow

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -11,6 +11,9 @@ project {
 align {
   preset = none
 }
+newlines {
+  avoidForSimpleOverflow = [punct, slc, tooLong]
+}
 # Disabled in default since this operation is potentially
 # dangerous if you define your own stripMargin with different
 # semantics from the stdlib stripMargin.
