scalafmt: enable SortModifiers with `styleGuide`

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -14,6 +14,12 @@ align {
 newlines {
   avoidForSimpleOverflow = [punct, slc, tooLong]
 }
+rewrite {
+  rules = [
+    SortModifiers,
+  ]
+  sortModifiers.preset = styleGuide
+}
 # Disabled in default since this operation is potentially
 # dangerous if you define your own stripMargin with different
 # semantics from the stdlib stripMargin.
