scalafmt: enable RedundantBraces rewrite

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -19,9 +19,14 @@ newlines {
 }
 rewrite {
   rules = [
+    RedundantBraces,
     RedundantParens,
     SortModifiers,
   ]
+  redundantBraces {
+    ifElseExpressions = true
+    stringInterpolation = true
+  }
   sortModifiers.preset = styleGuide
 }
 # Disabled in default since this operation is potentially
