--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,12 +1,16 @@
 version=3.8.1
 runner.dialect = scala213
-project.git = true
-project.excludeFilters = [
-  scalafmt-benchmarks/src/resources,
-  sbt-test
-  bin/issue
-]
-align.preset = none
+project {
+  git = true
+  excludeFilters = [
+    scalafmt-benchmarks/src/resources,
+    sbt-test
+    bin/issue
+  ]
+}
+align {
+  preset = none
+}
 # Disabled in default since this operation is potentially
 # dangerous if you define your own stripMargin with different
 # semantics from the stdlib stripMargin.
