--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,6 +7,7 @@ project {
     sbt-test
     bin/issue
   ]
+  layout = StandardConvention
 }
 align {
   preset = none
@@ -19,6 +20,7 @@ newlines {
 }
 rewrite {
   rules = [
+    AvoidInfix,
     Imports,
     RedundantBraces,
     RedundantParens,
