--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,11 +118,10 @@ jobs:
         with:
           images: scalameta/scalafmt
           tags: type=semver,pattern={{raw}}
-      - name: Downloading scalafmt-linux-musl for Docker Build
-        uses: actions/download-artifact@v4
-        with:
-          name: scalafmt-linux-musl
-          path: tmp/scalafmt-linux-musl
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
@@ -132,5 +131,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: linux/amd64,linux/arm64/v8
           push: true
           tags: ${{ steps.meta.outputs.tags }}
