--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Set up GraalVM
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3.0'
+          version: '22.3.3'
           java-version: '11'
           components: 'native-image'
           native-image-musl: ${{ matrix.libc == 'musl' }}
@@ -108,7 +108,6 @@ jobs:
   dockerize:
     needs: [native-image,test]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') && github.event_name != 'release'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -132,5 +131,5 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64/v8
-          push: true
+          push: ${{ startsWith(github.ref, 'refs/tags/v') && github.event_name != 'release' }}
           tags: ${{ steps.meta.outputs.tags }}
