Formatting: enable all redundantXxx parameters

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -14,7 +14,7 @@ align {
   stripMargin = true
 }
 newlines {
-  avoidForSimpleOverflow = [punct, slc, tooLong]
+  avoidForSimpleOverflow = all
   ignoreInSyntax = false
   source = fold
 }
@@ -40,8 +40,10 @@ rewrite {
     ]
   }
   redundantBraces {
-    ifElseExpressions = true
-    stringInterpolation = true
+    preset = all
+  }
+  redundantParens {
+    preset = all
   }
   sortModifiers.preset = styleGuide
   trailingCommas.style = "always"
