Formatting: use `redundantBraces.oneStatApply`

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -41,6 +41,10 @@ rewrite {
   }
   redundantBraces {
     preset = all
+    oneStatApply {
+      parensMaxSpan = 300
+      bracesMinSpan = 300
+    }
   }
   redundantParens {
     preset = all
