improvement: Pin image versions
Without the change it seems it's not possible to use scalafmt on older ubuntu images due to older gcc version. This should not be an issue normally as users can just update. For windows it's just a precaution since that is also the latest image and windows-2019 seems way too old.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
           - '11'
           - '21'
         os:
-          - windows-latest
-          - ubuntu-latest
+          - windows-2022
+          - ubuntu-22.04
         scala:
           - '2.12.20'
           - '2.13.16'
