--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -78,10 +78,12 @@ jobs:
       - name: Downloading scalafmt for Docker Build
         uses: actions/download-artifact@v4
         with:
-          name: scalafmt-x86_64-pc-linux
+          name: scalafmt-x86_64-pc-linux.zip
           path: tmp/scalafmt-docker-build # Dockerfile uses this
           github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event_name == 'release' && github.run_id || github.event.inputs.run_id }}
+      - name: Decompress scalafmt artifact
+        run: unzip tmp/scalafmt-docker-build/scalafmt-x86_64-pc-linux.zip -d tmp/scalafmt-docker-build
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
