--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -64,28 +64,23 @@ jobs:
           asset_content_type: application/zip
   dockerize:
     needs: [ scala-native ]
-    if: ${{ github.event_name == 'release' == success() }}
-    runs-on: ${{ matrix.platform == 'linux/arm64' && 'ubuntu-22.04-arm' || 'ubuntu-22.04' }}
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Downloading scalafmt for Docker Build
-        uses: actions/download-artifact@v4
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          name: scalafmt-${{ matrix.platform == 'linux/arm64' && 'aarch64' || 'x86_64' }}-pc-linux.zip
-          path: tmp/scalafmt-docker-build # Dockerfile uses this
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          run-id: ${{ github.event_name == 'release' && github.run_id || github.event.inputs.run_id }}
-      - name: Decompress scalafmt artifact
-        run: unzip tmp/scalafmt-docker-build/scalafmt-x86_64-pc-linux.zip -d tmp/scalafmt-docker-build
+          images: scalameta/scalafmt
+          tags: type=raw,value=${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.version }}
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and push
@@ -93,52 +88,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
           push: true
-          outputs: type=image,"name=scalameta/scalafmt",push-by-digest=true,name-canonical=true
-      - name: Export digest
-        run: |
-          mkdir -p ${{ runner.temp }}/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "${{ runner.temp }}/digests/${digest#sha256:}"
-      - name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ matrix.platform == 'linux/arm64' && 'arm64' || 'amd64' }}
-          path: ${{ runner.temp }}/digests/*
-          if-no-files-found: error
-          retention-days: 1
-  merge-docker-manifest:
-    runs-on: ubuntu-latest
-    needs: [dockerize]
-    steps:
-      - name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: ${{ runner.temp }}/digests
-          pattern: digests-*
-          merge-multiple: true
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: scalameta/scalafmt
-          tags: type=raw,value=${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.version }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Create manifest list and push
-        working-directory: ${{ runner.temp }}/digests
-        run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf 'scalameta/scalafmt@sha256:%s ' *)
-      - name: Inspect image
-        run: |
-          docker buildx imagetools inspect scalameta/scalafmt:${{ steps.meta.outputs.tags }}
   native-image: # deprecated, will soon be removed
     if: github.event_name == 'release'
     permissions:
