--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -64,6 +64,7 @@ jobs:
           asset_content_type: application/zip
   dockerize:
     needs: [ scala-native ]
+    if: ${{ github.event_name == 'release' == success() }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -89,8 +90,10 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
+          build-args: |
+            VERSION=${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.version }}
           push: true
+          tags: ${{ steps.meta.outputs.tags }}
   native-image: # deprecated, will soon be removed
     if: github.event_name == 'release'
     permissions:
