formatter: update to 3.10.0, adjust imports

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version=3.9.9
+version=3.10.0
 runner.dialect = scala213
 project {
   git = true
@@ -12,6 +12,9 @@ project {
 align {
   preset = none
   stripMargin = true
+}
+binPack {
+  importSelectors = fold
 }
 newlines {
   avoidForSimpleOverflow = all
@@ -27,7 +30,8 @@ rewrite {
     SortModifiers,
   ]
   imports {
-    expand = true
+    selectors = fold
+    removeRedundantSelectors = true
     sort = ascii
     groups = [
       ["org\\.scalafmt\\..*"],
