--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
         os:
           - windows-2025
           - ubuntu-22.04
+          - ubuntu-22.04-arm
         scala:
           - '2.12.20'
           - '2.13.17'
