--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -75,24 +75,23 @@ jobs:
         with:
           images: scalameta/scalafmt
           tags: type=raw,value=${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.version }}
-      - name: Downloading scalafmt for Docker Build
-        uses: actions/download-artifact@v5
-        with:
-          name: scalafmt-x86_64-pc-linux.zip
-          path: tmp/scalafmt-docker-build # Dockerfile uses this
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          run-id: ${{ github.event_name == 'release' && github.run_id || github.event.inputs.run_id }}
-      - name: Decompress scalafmt artifact
-        run: unzip tmp/scalafmt-docker-build/scalafmt-x86_64-pc-linux.zip -d tmp/scalafmt-docker-build
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and push
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
+          build-args: |
+            VERSION=${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.version }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
   native-image: # deprecated, will soon be removed
