--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         deploy: [
-          { os: macOS-13, name: scalafmt-x86_64-apple-darwin.zip },
-          { os: macOS-14, name: scalafmt-aarch64-apple-darwin.zip },
+          { os: macOS-15-intel, name: scalafmt-x86_64-apple-darwin.zip },
+          { os: macOS-15, name: scalafmt-aarch64-apple-darwin.zip },
           { os: ubuntu-22.04, name: scalafmt-x86_64-pc-linux.zip },
           { os: ubuntu-24.04-arm, name: scalafmt-aarch64-pc-linux.zip },
           { os: windows-2025, name: scalafmt-x86_64-pc-win32.zip }
